@@ -1,5 +1,6 @@
 Alpha 0.1.8.21
 - Fixed drawbridges not respecting the defined OpenDirection value. Thanks, @Death By, for the bug report!
+- Fixed being unable to delete any doors as a player when using the door's UID.
 
 Alpha 0.1.8.20
 - Fixed NPE when trying to open/close/toggle doors as a non-player. Thanks, @SlimeDog, for the bug report!
